# career-guru

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
app/: db.py  init_db.py  main.py  prepare_database.py  settings.py
app/api/: employer.py  health_check.py
app/crud/: employer.py  employer_crud.py
app/db/: prepare_database.py
app/models/: employer_model.py
app/models/pydantic/: employer.py
app/models/tortoise/: employer.py  employer_schema.py  vacancy.py  vacancy_schema.py
app/schemas/: employer_schema.py  vacancy_schema.py
database/: Dockerfile
