[tool.poetry]
name = "career-guru"
version = "0.1.0"
description = ""
authors = ["Sergei Svechnikov <srgcandle@mail.ru>"]
readme = "README.md"
packages = [{include = "career_guru"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "E501",
    "D",
    "I"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
line-ending = "lf"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
ruff = "^0.4.1"
commitizen = "^3.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
