[tool.poetry]
name = "career-guru"
version = "0.1.0"
description = ""
authors = ["Sergei Svechnikov <srgcandle@mail.ru>"]
readme = "README.md"
packages = [{include = "career_guru"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
ruff = "^0.4.1"
commitizen = "^3.24.0"
mypy = "^1.9.0"
tortoise-orm = "^0.20.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "E501",
    "D",
    "I"
]
ignore = ["D105"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["D104"]

[tool.ruff.format]
line-ending = "lf"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
